TestRunServiceTest#propagateDefectsToComment_shouldBeSuccessfullyPropagated is fixed. Version is changed to 2.2.204-SNAPSHOT.